<resources>
    <string name="app_name">AndroidCourse</string>
    <string name="MovieApp">Movies</string>
    <string name="username">username:</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="interstellar">Interstellar</string>
    <string name="Genre">Sci-Fi,Adventure</string>
    <string name="Actors">Matthew McConeughey</string>
    <string name="Movie_Description">Some things</string>
    <string name="link_IMDb"><u>Link IMDb</u></string>
    <string name="activity_movie">Interstellar</string>
    <string name="web_link">https://www.imdb.com/title/tt0816692/</string>
    <string name="title_movie_list">Movies</string>
    <string name="title_movie_detail">Movie Detail</string>
</resources>
