<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">

        <ImageView
            android:id="@+id/ivMoviePoster"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/interstellar" />

        <TextView
            android:id="@+id/tvMovieName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_toRightOf="@id/ivMoviePoster"
            android:text="@string/interstellar"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvGenre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvMovieName"
            android:layout_margin="2dp"
            android:layout_toRightOf="@id/ivMoviePoster"
            android:text="@string/Genre"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvActors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvGenre"
            android:layout_margin="2dp"
            android:layout_toRightOf="@id/ivMoviePoster"
            android:text="@string/Actors"
            android:textSize="15sp" />

        <RatingBar
            android:id="@+id/rbMovieRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivMoviePoster"
            android:layout_marginTop="10dp"
            android:isIndicator="true"
            android:numStars="5"
            android:rating="4.2"
            android:secondaryProgressTint="#00000000"
            android:stepSize="0.1" />

        <TextView
            android:id="@+id/tvMovieDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rbMovieRating"
            android:text="@string/Movie_Description"/>
        <TextView
            android:id="@+id/tvMovieLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvMovieDescription"
            android:text="@string/link_IMDb"
            android:textColor="#0000CD"
            android:padding="5dp"
            android:layout_margin="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:src="@drawable/predestination"/>
                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:numStars="5"
                    android:stepSize="0.1"
                    android:rating="4.6"
                    android:secondaryProgressTint="#00000000"
                    style="?android:ratingBarStyleSmall"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:src="@drawable/inception"/>
                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:numStars="5"
                    android:stepSize="0.1"
                    android:rating="5"
                    android:secondaryProgressTint="#00000000"
                    style="?android:ratingBarStyleSmall"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:src="@drawable/dunkirk" />
                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:numStars="5"
                    android:stepSize="0.1"
                    android:rating="4.5"
                    android:secondaryProgressTint="#00000000"
                    style="?android:ratingBarStyleSmall"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:src="@drawable/prestige"/>
                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:numStars="5"
                    android:stepSize="0.1"
                    android:rating="4.6"
                    android:secondaryProgressTint="#00000000"
                    style="?android:ratingBarStyleSmall"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</ScrollView>
</layout>